--- a/src/app/atividades/shared/alert-modal/alert-modal.component.html
+++ b/src/app/atividades/shared/alert-modal/alert-modal.component.html
@@ -1,4 +1,8 @@
-<div class="alert alert-{{ type }}" role="alert" style="margin-bottom: 0px">
+<div
+  class="alert alert-{{ type }} alert-dismissible fade show"
+  role="alert"
+  style="margin-bottom: 0px"
+>
   {{ message }}
   <button
     type="button"
