--- a/src/app/conta/criar-login/criar-login.component.html
+++ b/src/app/conta/criar-login/criar-login.component.html
@@ -1,44 +1,44 @@
 <h2 class="text-center">Criar minha conta</h2>
 
-<form (ngSubmit)="onSubmit()" #form="ngForm">
-  <div class="form-group">
-    <label>Nome</label>
+<form class="form-login" [formGroup]="formulario">
+  <div class="col-md-4 offset-md-4">
+    <label for="email" class="form-label">Email</label>
     <input
-      class="form-control"
-      type="text"
-      name="email"
-      id="email"
-      [(ngModel)]="account.nome"
-      required
-    />
-  </div>
-  <div class="form-group">
-    <label>E-mail</label>
-    <input
-      class="form-control"
       type="email"
-      name="email"
-      id="email"
-      [(ngModel)]="account.email"
-      required
-    />
-  </div>
-  <div class="form-group">
-    <label>Senha</label>
-    <input
       class="form-control"
-      type="password"
-      name="password"
-      id="password"
-      [(ngModel)]="account.senha"
-      required
+      id="email"
+      placeholder="nome@email.com"
+      formControlName="email"
+      [class.is-invalid]="
+        formulario.get('email').invalid && formulario.get('email').touched
+      "
     />
+    <div
+      *ngIf="formulario.get('email').invalid && formulario.get('email').touched"
+    >
+      <span class="is-invalid text-danger"> E-mail inválido</span>
+    </div>
   </div>
-  <button
-    type="submit"
-    class="btn btn-primary btn-block"
-    [disabled]="form.form.invalid"
-  >
-    Criar minha conta
-  </button>
+  <div class="col-md-4 offset-md-4">
+    <label for="senha" class="form-label">Senha</label>
+    <input
+      type="password"
+      class="form-control"
+      formControlName="senha"
+      [class.is-invalid]="
+        formulario.get('senha').invalid && formulario.get('senha').touched
+      "
+    />
+    <div
+      *ngIf="formulario.get('senha').invalid && formulario.get('senha').touched"
+    >
+      <span class="is-invalid text-danger"> Senha obrigatória</span>
+    </div>
+
+    <div style="margin-top: 10px">
+      <button type="submit" class="btn btn-primary" routerLink="./criar">
+        Criar Conta
+      </button>
+    </div>
+  </div>
 </form>
